--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.4",
     "dotenv": "^14.2.0",
     "ethers": "^5.5.3",
-    "hardhat": "^2.8.3",
-    "hardhat-deploy": "^0.9.29",
+    "hardhat": "^2.10.1",
+    "hardhat-deploy": "^0.11.12",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.18"
