--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.4",
     "dotenv": "^14.2.0",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.5.3",
     "hardhat": "^2.10.1",
     "hardhat-deploy": "^0.11.12",
